application.perperties updated

--- a/billing-service/src/main/resources/application.properties
+++ b/billing-service/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 # MongoDB Connection Settings
 
 # Wworking - atlas
-#spring.data.mongodb.uri=mongodb+srv://root:root@cluster0.qmgaf0x.mongodb.net/billing?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://{username}:{password}@{cluster-host}/billing?retryWrites=true&w=majority
 
 #cluster
 #spring.data.mongodb.uri=mongodb://${USERNAME:root}:${PASSWORD:root}@${DB_URL:localhost:27017}/billing
